--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,7 +6,7 @@ on:
   watch:
     types: started
   schedule:
-    - cron: 15 20 * * *
+    - cron: 15 20 * * 5
 
 jobs:
   IBM-Cloud-CF-APP-Restart:
